--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/darkmode.css">
 </head>
-<body>
+<body class="">
     <main id="app">
         <section class="app-head">
             <nav>
@@ -15,7 +16,7 @@
                     <h1>todo</h1>
                 </div>
                 <div class="nav__toggle">
-                    <img src="assets/img/icon-moon.svg" alt="">
+                    <img src="assets/img/icon-moon.svg" alt="" id="img-mode">
                 </div>
             </nav>
 
